deleted:    backup tutorial/_resets - Copia.scss deleted:    backup tutorial/_variables - Copia.scss deleted:    backup tutorial/style - Copia.scss deleted:    css/main.css deleted:    css/main.css.map new file:   img/bg-1.jpg renamed:    img/model-1.jpg -> img/rfhghjyhyh.jpg modified:   index.html modified:   scss/_home.scss modified:   scss/_menu.scss modified:   scss/main.scss modified:   src/css/main.css 	modified:   src/css/main.css.map

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@ body{
    background: $primary-color;
    color: set__text-color($primary-color);
    height: 100vh;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-family: 'Source Sans Pro', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    line-height: 1;
 }
 
