--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -10,7 +10,7 @@
         rgba($primary-color, 0.9),
         rgba($primary-color, 0.3),
             ),
-    url('../img/model-1.jpg') center top;
+    url('../../img/bg-1.jpg') center top;
     background-size: cover;
 
     &__name{
@@ -18,6 +18,7 @@
         padding-bottom: 1rem;
         margin-bottom: 1rem;
         border-bottom: 2px solid #fff;
+        letter-spacing: -1px;
         
       &--last{
           color: $secondary-color;
