--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,4 @@
-.menu-btn{
+.menu-btn {
     position: absolute;
     z-index: 1;
     right: 1rem;
@@ -8,7 +8,7 @@
     cursor: pointer;
     @include transition-ease;
 
-    &__burger{
+    &__burger {
         position: absolute;
         right: 0;
         top: 0.5rem;
@@ -28,17 +28,17 @@
             
         }
 
-        &::after{
+        &::after {
             content: '';
             position: absolute;
             top: 8px;
-            width: 20px;
+            width: 28px;
             height: 3px;
             background: set__text-color($primary-color);
             @include transition-ease;
         }
 
-        &.open{
+        &.open {
             transform: rotate(720deg);
             background: transparent;
 
@@ -50,7 +50,6 @@
                 width: 28px;
                 transform: rotate(-45deg) translate(3px, -7px);
             }
-
         }
     }
 }
@@ -68,7 +67,6 @@
 
     &.open{
         visibility: visible;
-
     }
     
     .menu-nav{
@@ -120,5 +118,11 @@
 @for $i from 1 through 4 {
     .menu-nav__item:nth-child(#{$i}){
         transition-delay: ($i * 0.1s) + 0.15s;
+    }
+}
+
+@media only screen and (min-width: $mobile) {
+    .nav {
+        visibility: visible;
     }
 }
