--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,17 +1,21 @@
 @import 'resets';
 @import 'config';
-@import 'home';
-@import 'menu';
+@import 'components';
 
 
-//typography
-
-body{
-   background: $primary-color;
-   color: set__text-color($primary-color);
-   height: 100vh;
-   font-family: 'Source Sans Pro', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   line-height: 1;
+html {
+    overflow-x: hidden;
+    
+    body{
+        background: $primary-color;
+        color: $text-color;
+        min-height: 100%;
+        height: 100vh;
+        font-family: 'Source Sans Pro', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        line-height: 1;
+        overflow-x: hidden;
+        display: grid;
+     }
 }
 
 h1, h2, h3 {
@@ -19,7 +23,7 @@ h1, h2, h3 {
 }
 
 a{
-    color: set__text-color($primary-color);
+    color: $text-color;
     text-decoration: none;
 }
 
@@ -29,35 +33,5 @@ header{
     position: fixed;
     z-index: 2;
     width: 100%;
-    padding: 1rem;
-    
-}
-
-main{
-    height: 100%;
-    width: 100%;
-    .social-icons{
-        position: fixed;
-        bottom: 1rem;
-        left: 1rem;
-
-        a{
-            padding: 0.4rem;
-            @include transition-ease;
-
-            &:hover {
-             color: $secondary-color;
-             }
-        }
-    }
-}
-
-footer{
-    font-size: 1rem;
-    position: fixed;
-    bottom: 0.4rem;
-    right: 1rem;
-    text-align: right;
-    padding: 1rem;
-    color: set__text-color($primary-color);
+    padding: 1rem; 
 }
