modified:   .gitignore 	modified:   index.html 	modified:   js/app.js 	deleted:    portfolio 	modified:   scss/components/_about.scss 	modified:   scss/components/_home.scss 	modified:   src/css/main.css 	modified:   src/css/main.css.map

--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -16,5 +16,17 @@
     p {
         font-size: 1.15rem;
         font-weight: weight(regular);
+        margin-top: 1rem;
+    }
+
+    ul {
+        text-align: left;
+
+        li {
+            margin-top: 0.25rem;
+            ul {
+                margin-left: 1rem;
+            }
+        }
     }
 }
