--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -14,25 +14,29 @@
     display: grid;
 
     .card-container {
-        position: relative;
-        display: block;
-        top: 0;
-        right: 0;
-        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
         height: 100vh;
+        width: 100%;
+        position: relative;
+        top: 0;
+        left: 0;
     }
 
     .welcome-card {
-        text-align: center;
-        position: absolute;
-        top: 35vh;
-        height: fit-content;
+        display: flex;
+        flex-flow: column;
+        align-content: center;
+        justify-self: center;
+        height: 500px;
         width: 360px;
         margin-left: -180px;
         left: 50%;
         background: rgba($color: $primary-color, $alpha: .3);
         border-radius: 1rem;
         z-index: 1;
+        margin: 0 auto;
     
         .avatar {
             display: block;
