--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -11,81 +11,78 @@
             ),
     url('../../img/bg-1.jpg') center top;
     background-size: cover;
-    display: grid;
 
-    .card-container {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
+    .card {
         height: 100vh;
         width: 100%;
-        position: relative;
-        top: 0;
-        left: 0;
-    }
 
-    .welcome-card {
-        display: flex;
-        flex-flow: column;
-        align-content: center;
-        justify-self: center;
-        height: 500px;
-        width: 360px;
-        margin-left: -180px;
-        left: 50%;
-        background: rgba($color: $primary-color, $alpha: .3);
-        border-radius: 1rem;
-        z-index: 1;
-        margin: 0 auto;
-    
-        .avatar {
-            display: block;
-            position: relative;
-            top: -6rem;
-            img {
+        &-welcome {
+            height: 500px;
+            width: 360px;
+            margin-left: -180px;
+            left: 50%;
+            background: rgba($color: $primary-color, $alpha: .3);
+            z-index: 1;
+            margin: 0 auto;
+            border-radius: 1.5rem;
+        
+            &__avatar {
                 display: block;
-                margin: 0 auto;
-                border-radius: 100%;
-                height: auto;
-                width: 150px;
-                border: 0.25rem solid transparent;
-            }
-        }
-    
-        &__title {
-            margin-top: -5rem;
-            .name {
-                font-size: 3rem;
-                letter-spacing: 0px;
-                font-weight: weight(bold);
-                border-bottom: 1px solid $text-color;
-                .surname {
-                    color: $secondary-color;
+                position: relative;
+                top: -6rem;
+                img {
+                    display: block;
+                    margin: 0 auto;
+                    border-radius: 100%;
+                    height: auto;
+                    width: 150px;
+                    border: 0.25rem solid transparent;
                 }
             }
-    
-            p {
-                margin-top: 1rem;
-                font-size: 1.5rem;
+        
+            &__title {
+                margin-top: -5rem;
+                .name {
+                    font-size: 3rem;
+                    letter-spacing: 0px;
+                    font-weight: weight(bold);
+                    border-bottom: 1px solid $text-color;
+                    .surname {
+                        color: $secondary-color;
+                    }
+                }
+        
+                p {
+                    margin-top: 1rem;
+                    font-size: 1.5rem;
+                }
             }
-        }
-    
-        &__social {
-            border-radius: 0 0 1rem 1rem;
-            visibility: visible;
-            color: $text-color;
-            padding: 1rem;
-            margin-top: 1rem;
-    
-            a {
-                margin: auto 0.3rem;
-                @include transition-ease;
-    
-                &:active {
-                    color: $secondary-color;
+        
+            &__social {
+                border-radius: 0 0 1rem 1rem;
+                visibility: visible;
+                color: $text-color;
+                padding: 1rem;
+                margin-top: 1rem;
+        
+                a {
+                    margin: auto 0.3rem;
+                    @include transition-ease;
+        
+                    &:active {
+                        color: $secondary-color;
+                    }
                 }
             }
         }
     }
+}
+
+.particles-js-canvas-el {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
