--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -154,6 +154,7 @@
             transform: translateY(0);
             height: 100%;
             padding: 1rem;
+            margin: 1rem 3rem;
             background: rgba($color: $primary-color, $alpha: 0.3) !important;
 
             &__item {
