--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -1,7 +1,7 @@
 .home{
-    height: 100%;
-    overflow: hidden;
-    align-items: center;
+    min-height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
     text-align: center;
     background: 
     linear-gradient(
@@ -13,17 +13,18 @@
     background-size: cover;
 
     .card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 100vh;
-        width: 100%;
+        width: 100vw;
 
         &-welcome {
+            margin-top: 20vh;
             height: 500px;
             width: 360px;
-            margin-left: -180px;
-            left: 50%;
             background: rgba($color: $primary-color, $alpha: .3);
-            z-index: 1;
-            margin: 0 auto;
+            z-index: 15;
             border-radius: 1.5rem;
         
             &__avatar {
@@ -78,11 +79,13 @@
     }
 }
 
-.particles-js-canvas-el {
-    width: 100%;
-    height: 100%;
+#particles-js {
     position: relative;
     top: 0;
     left: 0;
+    canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
-
