--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -1,7 +1,7 @@
 .home{
     min-height: 100vh;
     width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
     text-align: center;
     background: 
     linear-gradient(
@@ -83,6 +83,7 @@
     position: relative;
     top: 0;
     left: 0;
+
     canvas {
         position: absolute;
         top: 0;
