--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -9,7 +9,7 @@
         rgba($primary-color, 0.9),
         rgba($primary-color, 0.3),
             ),
-    url('../../img/bg-1.jpg') center top;
+    url('../img/bg-1.jpg') center top;
     background-size: cover;
 
     .card {
@@ -20,10 +20,10 @@
         width: 100vw;
 
         &-welcome {
-            margin-top: 20vh;
-            height: 500px;
-            width: 360px;
-            background: rgba($color: $primary-color, $alpha: .3);
+            margin-top: 5vh;
+            height: 350px;
+            width: 100%;
+            background: rgba($color: $primary-color, $alpha: .5);
             z-index: 5;
             border-radius: 1.5rem;
         
@@ -37,7 +37,6 @@
                     border-radius: 100%;
                     height: auto;
                     width: 150px;
-                    border: 0.25rem solid transparent;
                 }
             }
         
