modified:   index.html 	modified:   js/gallery.js 	new file:   js/gallerydrop.js 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	new file:   src/img/speechrecognition.jpg 	new file:   src/img/voiceinator.png 	modified:   src/scss/_components.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_projects.scss 	new file:   src/scss/components/_projectsdrop.scss

--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -47,6 +47,7 @@
                     letter-spacing: 0px;
                     font-weight: weight(bold);
                     border-bottom: 1px solid $text-color;
+                    display: inline-block;
                     .surname {
                         color: $secondary-color;
                     }
