--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -3,11 +3,15 @@
     padding: 3rem;
     text-align: center;
     color: $text-color;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
     h1 {
         font-size: 2rem;
         font-weight: weight(bolder);
-        border-bottom: 1px solid $primary-color;
+        border-bottom: 1px solid $text-color;
+        display: inline-block;
         padding-bottom: 0.5rem;
         margin-bottom: 1rem;
     }
@@ -15,44 +19,66 @@
     
     
     .items {
+        height: 500px;
+        width: 100vw;
         
         &__title {
             h2 {
                 font-size: 1.7rem;
                 font-weight: weight(bold);
-                border-bottom: 1px solid $primary-color;
                 display: inline-block;
+                border-bottom: 1px solid $text-color;
                 margin-top: 2rem;
                 margin-bottom: 1.2rem;
-                cursor: pointer;
-            }
-
-            .arrow {
-                font-size: 1rem;
-                margin-left: 0.5rem;
-                font-weight: weight(bold);
-                @include transition-ease;
             }
         }
 
         &__canvas {
-            list-style: none;
-            max-height: 0;
-            overflow: hidden;
-            @include transition-ease;
+            height: fit-content;
+            padding: 1rem;
+            width: 70vw;
+            border: 1px solid white;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            cursor: pointer;
+            transition: all 0.2s;
+            transform: scale(0.98);
+            background: rgba(255,255,255,0.1);
+            display: inline-flex;
 
             .item {
+                margin: 0 1rem;
+                padding: 2rem;
+                display: inline-flex;
+                flex-wrap: wrap;
+                flex: 1;
+                align-items: center;
+                justify-content: center;
+                font-size: 2rem;
+                font-weight: 100;
+                color: $text-color;
             
-                h3 {
-    
-                }
-    
-                .fa-github {
-    
+                &__title {
+                    display: inline-flex;
+                    justify-content: space-between;
+                    margin-bottom: 1rem;
+                    h3 {
+                        @include transition-ease;
+                        &:hover {
+                            border-bottom: 1px solid $text-color;
+                        }
+                    }
+        
+                    .git {
+                        @include transition-ease;
+                        &:hover {
+                            color: rgba($color: $primary-color, $alpha: .7);
+                        }
+                    }
                 }
                 
                 img {
-                    height: 360px;
+                    height: 320px;
                     width: 640px;
                 }
             }
@@ -60,9 +86,10 @@
         }
         
         .active {
-            max-height: 1500px;
-            transition: all 0.25s ease-in;
-            @include transition-ease;
+            background: rgba(255,255,255,0.3);
+            cursor: grabbing;
+            cursor: -webkit-grabbing;
+            transform: scale(1);
         }  
     }
 }
