modified:   index.html     modified:   src/css/main.css 	modified:   src/css/main.css.map 	renamed:    src/img/avatar.jpg -> src/img/ava2tar.jpg 	new file:   src/img/avatar.png 	new file:   src/img/testa.jpg 	modified:   src/scss/components/_about.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_projects.scss 	modified:   src/scss/main.scss

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,9 +1,13 @@
 .about {
     display: grid;
     background: $text-color;
-    padding: 3rem;
+    padding: 5rem 5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     text-align: center;
     color: $primary-color;
+    clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+
 
     h1 {
         font-size: 2rem;
