--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -73,6 +73,9 @@
                     &:active {
                         color: $secondary-color;
                     }
+                    &:hover {
+                        color: $secondary-color;
+                    }
                 }
             }
         }
