--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 5rem;
 
 
     h1 {
@@ -19,7 +20,6 @@
     
     
     .items {
-        margin: 0 auto;
         height: 500px;
         width: 100vw;
         display: flex;
@@ -43,32 +43,28 @@
         &__canvas {
             height: 100%;
             padding: 1rem;
-            width: 70vw;
+            width: 100%;
             overflow-x: scroll;
             overflow-y: hidden;
             cursor: pointer;
             transition: all 0.2s;
             transform: scale(0.98);
             background: rgba(255,255,255,0.1);
-            border: 1px solid rgba(0,0,0,0.1);
-            border-radius: 2%;
             display: inline-flex;
 
             .item {
                 width: 640px;
+                margin: 1rem 2rem;
                 display: inline-flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                gap: 1rem;
                 font-size: 2rem;
                 font-weight: 100;
                 color: $text-color;
-                margin: 1rem 2rem;
             
                 &__title {
                     display: inline-flex;
                     justify-content: space-between;
-                    margin-bottom: 1rem;
 
                     h3 {
                         @include transition-ease;
