modified:   index.html 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	modified:   src/scss/components/_about.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_projects.scss

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -7,6 +7,7 @@
     text-align: center;
     color: $primary-color;
     clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+    margin-top: -5rem;
 
 
     h1 {
