--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,5 +1,6 @@
 .home{
     min-height: 100vh;
+    height: 110vh;
     width: 100vw;
     overflow: hidden;
     text-align: center;
@@ -23,7 +24,7 @@
             margin-top: 5vh;
             height: 350px;
             width: 100%;
-            background: rgba($color: $primary-color, $alpha: .5);
+            background: rgba($color: $primary-color, $alpha: .8);
             z-index: 5;
             border-radius: 1.5rem;
         
