deleted:    about.html 	modified:   index.html 	new file:   js/jquery.js 	new file:   js/owl.carousel.min.js 	new file:   js/owl.userconfig.js 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	new file:   src/css/owl.carousel.css 	new file:   src/css/owl.theme.default.css 	new file:   src/img/joyjet.png 	modified:   src/img/realestate.jpg 	modified:   src/img/speechrecognition.jpg 	modified:   src/img/voiceinator.png 	modified:   src/img/whack.jpg 	modified:   src/scss/_components.scss 	modified:   src/scss/_config.scss 	modified:   src/scss/_resets.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_menu.scss 	modified:   src/scss/components/_projects.scss 	modified:   src/scss/components/_slideshow.scss

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -3,18 +3,25 @@ $secondary-color: #ff652f;
 $text-color: #f3f3f3;
 $font-weight:(
     "regular": 400,
-    "medium": 500,
+    "medium": 600,
     "bold": 700,
     "bolder": 900,
 );
-$mobile: 768px;
 
 @function weight($weightname){
     @return map-get($font-weight, $weightname );
 };
 
+@mixin hover-secondary {
+    @include transition-ease;
+    
+    &:active, &:hover, &:focus {
+        color: $secondary-color;
+    }
+}
+
 @mixin transition-ease {
-    transition: all 0.5s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 @mixin media-md {
