--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -24,7 +24,7 @@
             margin-top: 5vh;
             height: 350px;
             width: 100%;
-            background: rgba($color: $primary-color, $alpha: .8);
+            background: rgba($color: $primary-color, $alpha: .5);
             z-index: 5;
             border-radius: 1.5rem;
         
@@ -35,9 +35,10 @@
                 img {
                     display: block;
                     margin: 0 auto;
-                    border-radius: 100%;
-                    height: auto;
+                    border-radius: 50%;
+                    height: 150px;
                     width: 150px;
+                    border: 1rem solid rgba($primary-color, 0.5);
                 }
             }
         
@@ -92,5 +93,25 @@
         position: absolute;
         top: 0;
         left: 0;
+    }
+}
+
+@include media-md {
+    .home {
+        .card {
+            &-welcome {
+                width: 50vw;
+            }
+        }
+    }
+}
+
+@include media-xl {
+    .home {
+        .card {
+            &-welcome {
+                width: 30vw;
+            }
+        }
     }
 }
