--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -52,7 +52,7 @@
             display: inline-flex;
 
             .item {
-                width: 560px;
+                width: 75vw;
                 height: fit-content;
                 margin: 1.5rem 2rem;
                 display: inline-flex;
@@ -85,8 +85,8 @@
 
                 
                 img {
-                    height: 280px;
-                    width: 560px;
+                    height: 37.5vh;
+                    width: 75vw;
                 }
             }
         }
