modified:   index.html 	deleted:    js/gallery.js 	deleted:    js/gallerydrop.js 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	deleted:    src/img/ava2tar.jpg 	modified:   src/scss/components/_about.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_menu.scss 	modified:   src/scss/components/_slideshow.scss 	modified:   src/scss/main.scss

--- a/src/scss/components/_slideshow.scss
+++ b/src/scss/components/_slideshow.scss
@@ -7,8 +7,6 @@
 		font-size: 2rem;
 		font-weight: weight(bold);
 		margin-bottom: 3rem;
-		padding-bottom: .5rem;
-		border-bottom: 1px solid $text-color;
 	}
 
 	.owl-carousel {
@@ -50,5 +48,22 @@
 			display: flex;
 		}
 	}
+}
+
+@include media-md {
+	.projects {
+		padding: 10rem;
+	}
+}
+
+.owl-nav {
+    button {
+        display: block;
+    }
+}
+
+.owl-dots {
+	position: absolute;
+	left: 50%;
 }
 
