--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,37 +1,67 @@
 .about {
-    display: grid;
-    background: $text-color;
-    padding: 5rem 5rem;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    text-align: center;
-    color: $primary-color;
+    padding: 5rem 3rem;
     clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+    background: $text-color;
+    color: $primary-color;
     margin-top: -5rem;
 
-
-    h1 {
-        font-size: 2rem;
-        font-weight: weight(bold);
-        border-bottom: 1px solid $primary-color;
-        padding-bottom: 0.5rem;
-        margin-bottom: 1rem;
-    }
-
-    p {
-        font-size: 1.15rem;
-        font-weight: weight(regular);
-        margin-top: 1rem;
-    }
-
-    ul {
+    &__header {
         text-align: left;
-
-        li {
-            margin-top: 0.25rem;
+        margin-bottom: 1rem;
+        
+        h1 {
+            font-size: 2rem;
+            margin-bottom: .5rem;
+            font-weight: weight(medium);
+        }
+    }
+    
+    &__cards {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        
+        &__header {
+            width: 250px;
+            margin-bottom: 1rem;
+            
+            h2 {
+                margin-bottom: .5rem;
+                font-size: 1.25rem;
+                font-weight: weight(medium);
+            }
+            
             ul {
-                margin-left: 1rem;
+                li {
+                    margin: .25rem 0;
+                }
             }
         }
+        
+        &__card {
+            width: 250px;
+            margin: 1rem 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            h2 {
+                margin-bottom: .5rem;
+                font-size: 1.25rem;
+                font-weight: weight(medium);
+            }
+
+            ul {
+                li {
+                    margin: .25rem 0;
+
+                    ul {
+                        li {
+                            margin: .25rem .5rem;
+                        }
+                    }
+                }
+            }
+       }
     }
 }
