--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,6 +1,6 @@
 .home{
     min-height: 100vh;
-    height: 110vh;
+    height: 90vh;
     width: 100vw;
     overflow: hidden;
     text-align: center;
@@ -17,16 +17,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 90vh;
         width: 100vw;
 
         &-welcome {
-            margin-top: 5vh;
             height: 350px;
             width: 100%;
             background: rgba($color: $primary-color, $alpha: .5);
             z-index: 5;
-            border-radius: 1.5rem;
         
             &__avatar {
                 display: block;
@@ -105,7 +103,13 @@
     .home {
         .card {
             &-welcome {
+                border-radius: 1.5rem;
                 width: 50vw;
+
+                &__social {
+                    font-size: 1.2rem;
+                    letter-spacing: 1.2rem;
+                }
             }
         }
     }
