--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -1,6 +1,7 @@
 header {
     background: rgba($color: $primary-color, $alpha: 0.8);
     height: 25px;
+    display: none;
 }
 .menu-btn {
     z-index: 26;
@@ -107,9 +108,10 @@ header {
             padding: 2rem, 0;
             margin: 2rem, 0;
             font-weight: 300;
+            border-bottom: 3px solid transparent;
             @include transition-ease;
 
-            &:active {
+            &:active, &:focus, &:hover {
                 color: $secondary-color;
             }
         }
@@ -126,7 +128,7 @@ header {
             margin: auto 0.5rem;
             @include transition-ease;
 
-            &:active {
+            &:active, &:focus, &:hover {
                 color: $secondary-color;
             }
         }
