--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -6,13 +6,18 @@
     margin-top: -5rem;
 
     &__header {
-        text-align: left;
-        margin-bottom: 1rem;
+        text-align: center;
         
         h1 {
             font-size: 2rem;
-            margin-bottom: .5rem;
+            margin-bottom: 1rem;
             font-weight: weight(medium);
+            border-bottom: 1px solid $primary-color;
+        }
+
+        p {
+            margin-bottom: 3rem;
+            font-size: 1.1rem;
         }
     }
     
@@ -63,5 +68,16 @@
                 }
             }
        }
+    }
+}
+
+@include media-lg {
+    .about {
+        margin: 0;
+        padding: 0 5rem;
+        
+        &__header {
+            text-align: left;
+        }
     }
 }
