--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,9 +1,13 @@
 footer{
     font-size: 1rem;
-    position: absolute;
-    bottom: 0.5rem;
-    right: 1rem;
-    text-align: right;
+    text-align: center;
     padding: 1rem;
     color: $text-color;
+}
+
+@include media-md {
+    .footer {
+        text-align: right;
+        padding: 5rem;
+    }
 }
