--- a/src/scss/components/_slideshow.scss
+++ b/src/scss/components/_slideshow.scss
@@ -80,6 +80,12 @@
 }
 
 .owl-dots {
-	display: none;
+	margin-top: 1.5rem;
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	&:active, &:focus, &:hover {
+		border: none;
+	}
 }
 
