--- a/src/scss/components/_slideshow.scss
+++ b/src/scss/components/_slideshow.scss
@@ -1,6 +1,7 @@
 .projects {
 	text-align: center;
 	padding: 1rem;
+	margin-top: 5rem;
 	
 	h1 {
 		font-size: 2rem;
@@ -64,6 +65,7 @@
 
 @include media-md {
 	.projects {
+		padding: 3rem;
 		h1 {
 			margin-top: - .475rem;
 		}
@@ -72,6 +74,7 @@
 
 @include media-lg {
 	.projects {
+		margin-top: 0;
 		padding: 5rem;
 	}
 }
