new file:   deutsch.html 	modified:   index.html 	new file:   portugues.html 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	modified:   src/img/avatar.png 	modified:   src/img/bg-1.jpg 	modified:   src/img/greeter.png 	modified:   src/img/joyjet.png 	new file:   src/img/png original/avatar.png 	new file:   src/img/png original/greeter.png 	new file:   src/img/png original/joyjet.png 	new file:   src/img/png original/socialtheme.png 	new file:   src/img/png original/voiceinator.png 	new file:   src/img/realestate-2.jpg 	modified:   src/img/realestate.jpg 	modified:   src/img/socialtheme.png 	modified:   src/img/speechrecognition.jpg 	deleted:    src/img/testa.jpg 	modified:   src/img/voiceinator.png 	modified:   src/img/whack.jpg 	modified:   src/scss/components/_footer.scss 	deleted:    src/scss/components/_projects.scss 	deleted:    src/scss/components/_projectsdrop.scss

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,6 +3,19 @@ footer{
     text-align: center;
     padding: 1rem;
     color: $text-color;
+    display: flex;
+
+    .language {
+        margin-right: 1rem;
+
+        &.active {
+            border-bottom: 1px solid $text-color;
+        }
+    }
+
+    .copy {
+        margin-left: auto;
+    }
 }
 
 @include media-md {
